--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,3 @@
 - version: 0.0.1
-  date:    Wed Dec 19 16:06:49 PST 2012
-  changes: …
+  date:    Wed Dec 19 22:35:56 PST 2012
+  changes: First release
