--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,5 +1,5 @@
 - version: 0.0.2
-  date:    Sun Mar 31 22:13:15 PDT 2013
+  date:    Sat Apr 20 07:08:34 CST 2013
   changes: Integrate latest pegex and testml
 - version: 0.0.1
   date:    Wed Dec 19 22:35:56 PST 2012
